remove board member images, fix issues on mobile, update page header

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -4290,5 +4290,82 @@ footer .footer-area {
 			height: 250px;
 		}
 	}
+}
 
+.page-header {
+	position: relative;
+
+	.image-shape {
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		background-image: url("../images/header-bg2.svg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+	}
+
+	.header-bg {
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		background-image: url("../images/header-bg.svg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+	}
+}
+
+.header-deco {
+	.motif {
+		display: inline-block;
+    padding: 20px 40px;
+    border-top: 3px solid $theme-primary;
+
+    img {
+    	width: 80px;
+    }
+	}
+}
+
+@media (max-width: 991px) {
+	.reverse-order-mobile {
+		.order-1 {
+			order: 2;
+		}
+
+		.order-2 {
+			order: 1;
+		}
+	}
+}
+
+.board-member {
+	.label {
+		font-size: 16px;
+		color: $theme-secondary;
+		font-weight: 600;
+		margin-bottom: 10px;
+	}
+
+	.bio {
+		font-size: 16px;
+		margin-bottom: 10px;
+	}
+}
+
+.embedded-iframe {
+	width: 100%;
+	height: 650px;
+
+	iframe {
+		height: 100%;
+		width: 100%;
+	}
 }
